Add the ui to view all the refresh token
