# Backend/Api/Data/Models/Persons/Session.cs
@@ -3,19 +3,26 @@ using LinqToDB.Mapping;
 namespace Api.Data.Models.Persons;
 
 [Table(Schema = "person")]
-public class Session
+public class Sessions
 {
+    [Column, NotNull]
     public long UserId { get; set; }
 
-    public Guid SessionId { get; set; }
+    [Column, NotNull]
+    public required string SessionId { get; set; }
 
+    [Column, Nullable]
     public string? Ip { get; set; }
 
+    [Column, Nullable]
     public string? Location { get; set; }
 
+    [Column, Nullable]
     public string? UserAgent { get; set; }
 
+    [Column, NotNull]
     public DateTime Start { get; set; }
 
+    [Column, NotNull]
     public DateTime Stop { get; set; }
 }
